--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI for Node.js Project (with Debug)
+name: CI for Node.js Project (EC2 Deploy)
 
 on:
   push:
@@ -6,11 +6,15 @@ on:
       - main
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
+    env:
+      EC2_HOST: ${{ secrets.EC2_HOST }}
+      EC2_USER: ${{ secrets.EC2_USER }}
+      EC2_SSH_KEY_B64: ${{ secrets.EC2_SSH_KEY_B64 }}
 
     steps:
-      # 1️⃣ Завантаження коду
+      # 1️⃣ Клонування репозиторію
       - name: Checkout repository
         uses: actions/checkout@v4
 
@@ -24,29 +28,17 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      # 4️⃣ Білд
+      # 4️⃣ Білд проєкту
       - name: Build project
         run: npm run build
 
-      # 5️⃣ Перевірка результатів білду
+      # 5️⃣ Лістинг файлів після білду (debug)
       - name: List files after build
-        run: |
-          echo "📁 Поточна структура після білду:"
-          ls -la
+        run: ls -la
 
-      # 6️⃣ Завантаження білду як артефакту (опціонально)
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: build-artifact
-          path: |
-            dist
-            build
-
-      # 7️⃣ Перевірка змінних середовища
-      - name: Debug environment variables
+      # 6️⃣ Debug environment
+      - name: Debug environment
         run: |
-          echo "🧩 Debug info:"
           echo "EC2_HOST = $EC2_HOST"
           echo "EC2_USER = $EC2_USER"
           if [ -z "$EC2_HOST" ] || [ -z "$EC2_USER" ]; then
@@ -54,40 +46,29 @@ jobs:
             exit 1
           fi
 
-      # 8️⃣ Розшифровка SSH-ключа
+      # 7️⃣ Розшифровка SSH ключа
       - name: Decode SSH key
         run: |
-          if [ -z "$EC2_SSH_KEY_B64" ]; then
-            echo "❌ EC2_SSH_KEY_B64 не задано!"
-            exit 1
-          fi
-          echo "🔐 Створюю SSH ключ..."
           echo "$EC2_SSH_KEY_B64" | base64 --decode > my-ec2-key.pem
           chmod 600 my-ec2-key.pem
-          echo "✅ SSH ключ створено:"
           ls -lh my-ec2-key.pem
 
-      # 9️⃣ Тест SSH-з’єднання (без виконання команд)
+      # 8️⃣ Тест SSH-з’єднання
       - name: Test SSH connection
         run: |
-          echo "🧠 Перевіряю SSH-з'єднання з $EC2_USER@$EC2_HOST"
-          ssh -i my-ec2-key.pem -o StrictHostKeyChecking=no -v $EC2_USER@$EC2_HOST "echo '✅ SSH успішно підключився!'"
+          ssh -i my-ec2-key.pem -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST "echo '✅ SSH підключення успішне'"
 
-      # 🔟 Копіювання проєкту на EC2
-      - name: Copy project files to EC2
+      # 9️⃣ Копіювання проєкту на EC2
+      - name: Copy project to EC2
         run: |
-          echo "🚀 Копіюю файли на EC2..."
           scp -i my-ec2-key.pem -o StrictHostKeyChecking=no -r . $EC2_USER@$EC2_HOST:/home/$EC2_USER/app
-          echo "✅ Копіювання завершено!"
 
-      # 11️⃣ Запуск застосунку на EC2
+      # 🔟 Запуск застосунку на EC2
       - name: Run application on EC2
         run: |
-          echo "🟢 Запускаю застосунок на EC2..."
           ssh -i my-ec2-key.pem -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST "
             cd /home/$EC2_USER/app && \
             npm install && \
             nohup npm start > app.log 2>&1 &
           "
-          echo "✅ Застосунок запущено!"
 
